--- a/VISA/UK/uk.css
+++ b/VISA/UK/uk.css
@@ -23,19 +23,32 @@ a{
 }
 
 .content-container{
-    height: 80vh;
+    height: 90vh;
     width: 80vw;
     margin: 0 auto;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     font-family: 'Courier New', Courier, monospace;
     
 }
 
+.right ul{
+    margin-bottom: 20px;
+}
+
 .content{
-    width: 25%;
-    
+    width: 40%;
+    margin: 0 auto;
+}
+
+.price{
+    color: blue;
+}
+
+.client-type{
+    color: red;
+    font-weight: bold;
 }
 
 .left{
@@ -68,7 +81,130 @@ a{
     margin-bottom: 10px;
 }
 
+.right ul{
+    margin-bottom: 20px;
+}
+
 .right li{
     list-style: disc;
     margin-left: 20px;
+}
+
+.buttons-container{
+    width: 10%;
+    position: absolute;
+    right: 10px;
+    top: 250px;
+    cursor: pointer;
+
+}
+
+.buttons{
+    background-color: blue;
+    padding: 0px 10px;
+    margin: 5px 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    transition: all 0.3s;
+}
+
+.buttons:hover{
+    background-color: darkblue;
+}
+
+
+.buttons button{
+    width: 100%;
+    cursor: pointer;
+    padding: 10px 0;
+    background-color: transparent;
+    color: #fff;
+    border: none;
+    border-right: 1px solid #fff;
+    text-align: center;
+    padding-right: 10px;
+}
+
+.buttons-container img{
+    width: 24px;
+    height: 24px;
+    margin: 0 auto;
+    margin-left: 10px;
+}
+
+#tourist{
+    display: none;
+}
+
+#tourist.active{
+    display: block;
+}
+
+#affaire{
+    display: none;
+}
+
+#affaire.active{
+    display: block;
+}
+
+#medical{
+    display: none;
+}
+
+#medical.active{
+    display: block;
+}
+
+#etude{
+    display: none;
+}
+
+#etude.active{
+    display: block;
+}
+
+@media print {
+    .print-no-show{
+        display: none;
+    }
+
+    body{
+        width: 100%;
+        height: 100%;
+    }
+
+    .content-container{
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+    }
+
+    .left{
+        border: none;
+    }
+
+    .content{
+        margin: 0;
+        width: 100%;
+    }
+
+    .left-content{
+        width: 100%;
+    }
+
+    .left-content ul{
+        width: 100%;
+    }
+
+    .left-content li{
+        width: 100%;
+    }
+
+    .dot-list{
+        width: 100%;
+    }
 }
